--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "stylelint": "stylelint \"./**/*.{css,less,scss,sass,vue}\"",
     "stylelint:fix": "stylelint \"./**/*.{css,less,scss,sass,vue}\" --fix",
     "test": "jest test",
-    "dev": "lila dev"
+    "dev": "lila dev",
+    "sync": "lila sync",
+    "sync:gray": "lila sync -e gray"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
@@ -84,7 +86,9 @@
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "particles.js": "^2.0.0",
+    "screenfull": "^4.0.0",
     "vue": "^2.5.22",
+    "vue-i18n": "^8.7.0",
     "vue-router": "^3.0.2",
     "vuex": "^3.0.1"
   }
