--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "nprogress": "^0.2.0",
     "particles.js": "^2.0.0",
     "screenfull": "^4.0.0",
+    "see-fetch": "^1.0.1",
     "vue": "^2.5.22",
     "vue-i18n": "^8.7.0",
     "vue-router": "^3.0.2",
