--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "lila-webpack": "^0.5.6",
     "lila-webpack-config": "^0.5.6",
     "lint-staged": "^8.1.0",
+    "moment-locales-webpack-plugin": "^1.0.7",
     "prettier": "^1.15.3",
     "stylelint": "^9.9.0",
     "stylelint-config-prettier": "^4.0.0",
@@ -89,6 +90,7 @@
     "element-ui": "^2.4.11",
     "js-cookie": "^2.2.0",
     "json-refactor": "^1.0.0",
+    "moment": "^2.24.0",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "particles.js": "^2.0.0",
