--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
   "name": "cms-spa",
-  "private": true,
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "A lila project.",
+  "private": true,
   "scripts": {
     "precommit": "npm run lint-staged",
     "lint-staged": "lint-staged",
-    "prettier": "prettier --write \"./**/*.{js,jsx,vue,css,less,scss,sass,html,md,json}\"",
+    "prettier": "prettier --write \"./**/*.{js,vue,css,less,scss,sass,html,md,json}\"",
     "eslint": "eslint \"./**/*.js\"",
     "eslint:fix": "eslint \"./**/*.js\" --fix",
-    "eslint:react": "eslint \"./**/*.jsx\" -c .eslintrc.react.js",
-    "eslint:react:fix": "eslint \"./**/*.jsx\" -c .eslintrc.react.js --fix",
-    "eslint:vue": "eslint \"./**/*.vue\" -c .eslintrc.vue.js",
-    "eslint:vue:fix": "eslint \"./**/*.vue\" -c .eslintrc.vue.js --fix",
+    "eslint-vue": "eslint \"./**/*.vue\" -c .eslintrc.vue.js",
+    "eslint-vue:fix": "eslint \"./**/*.vue\" -c .eslintrc.vue.js --fix",
     "stylelint": "stylelint \"./**/*.{css,less,scss,sass,vue}\"",
     "stylelint:fix": "stylelint \"./**/*.{css,less,scss,sass,vue}\" --fix",
-    "test": "jest test",
+    "flow": "flow",
+    "flow:check": "flow check",
+    "test": "jest",
+    "test-watch": "jest --watch --notify",
+    "test-cover": "jest --coverage",
+    "coverage": "npm run test-cover && opn coverage/lcov-report/index.html",
     "dev": "lila dev",
     "sync": "lila sync",
-    "sync:gray": "lila sync -e gray"
+    "sync:gray": "lila sync -e gray",
+    "sync:prod": "lila sync -e prod"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
@@ -29,20 +33,20 @@
     "eslint-plugin-flowtype": "^3.2.1",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jest": "^22.1.3",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.3",
-    "eslint-plugin-vue": "^5.1.0",
+    "eslint-plugin-vue": "^5.2.2",
+    "flow-bin": "^0.94.0",
     "husky": "^1.3.1",
     "jest": "^23.6.0",
-    "lila-bin": "^0.6.0",
-    "lila-core": "^0.6.0",
-    "lila-tasks": "^0.6.0",
-    "lila-webpack": "^0.6.0",
-    "lila-webpack-config": "^0.6.0",
+    "lila-bin": "^0.7.1",
+    "lila-core": "^0.7.1",
+    "lila-tasks": "^0.7.1",
+    "lila-webpack": "^0.7.1",
+    "lila-webpack-config": "^0.7.2",
     "lint-staged": "^8.1.0",
     "moment-locales-webpack-plugin": "^1.0.7",
+    "opn-cli": "^4.0.0",
     "prettier": "^1.15.3",
     "stylelint": "^9.9.0",
     "stylelint-config-prettier": "^4.0.0",
@@ -52,11 +56,6 @@
   "lint-staged": {
     "**/*.js": [
       "eslint --fix",
-      "prettier --write",
-      "git add"
-    ],
-    "**/*.jsx": [
-      "eslint -c .eslintrc.react.js --fix",
       "prettier --write",
       "git add"
     ],
@@ -83,19 +82,24 @@
     "@fortawesome/fontawesome-free": "^5.6.3",
     "@senntyou/shortcut.css": "^0.1.0",
     "@zzh/handling": "^0.3.0",
-    "@zzh/store-image": "git+http://git.zizaihome.cn/senntyou/store-image.git#a5980b37",
+    "@zzh/regions": "^0.3.0",
+    "@zzh/store-image": "git+http://git.zizaihome.cn/senntyou/store-image.git#ff9621e2",
     "@zzh/ueditor": "^0.3.0",
-    "@zzh/upload": "^0.3.0",
+    "@zzh/upload": "git+http://git.zizaihome.cn/senntyou/upload.git#5fa55966",
     "@zzh/util": "^0.3.0",
+    "colors.css": "^3.0.0",
     "element-ui": "^2.4.11",
+    "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
     "json-refactor": "^1.0.0",
+    "lunar-calendar": "^0.1.4",
     "moment": "^2.24.0",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "particles.js": "^2.0.0",
     "reqwest": "^2.0.5",
     "screenfull": "^4.0.0",
+    "see-ajax": "^1.0.1",
     "see-fetch": "^1.0.1",
     "vue": "^2.5.22",
     "vue-i18n": "^8.7.0",
