--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "node": ">=8.0.0"
   },
   "dependencies": {
+    "@fancyapps/fancybox": "^3.5.7",
     "@fortawesome/fontawesome-free": "^5.6.3",
     "@senntyou/shortcut.css": "^0.1.0",
     "@zzh/handling": "^0.3.0",
