--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@fortawesome/fontawesome-free": "^5.6.3",
     "@senntyou/shortcut.css": "^0.1.0",
     "@zzh/handling": "^0.3.0",
+    "@zzh/n-util": "^0.0.3",
     "@zzh/regions": "^0.3.0",
     "@zzh/store-image": "git+http://git.zizaihome.cn/senntyou/store-image.git#ff9621e2",
     "@zzh/ueditor": "^0.3.0",
