--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "@zzh/ueditor": "^0.3.0",
     "@zzh/upload": "git+http://git.zizaihome.cn/senntyou/upload.git#5fa55966",
     "@zzh/util": "^0.3.0",
+    "chart.js": "^2.8.0",
     "colors.css": "^3.0.0",
     "element-ui": "^2.8.2",
     "jquery": "^3.3.1",
