--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "vue": "^2.5.22",
     "vue-i18n": "^8.7.0",
     "vue-router": "^3.0.2",
+    "vuedraggable": "^2.20.0",
     "vuex": "^3.0.1"
   }
 }
