--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "see-ajax": "^1.0.1",
     "see-fetch": "^1.0.1",
     "vue": "^2.5.22",
+    "vue-cropper": "^0.4.9",
     "vue-i18n": "^8.7.0",
     "vue-router": "^3.0.2",
     "vuedraggable": "^2.20.0",
