--- a/package.json
+++ b/package.json
@@ -106,12 +106,13 @@
     "screenfull": "^4.0.0",
     "see-ajax": "^1.0.1",
     "see-fetch": "^1.0.1",
+    "sortablejs": "^1.10.0-rc2",
     "video.js": "^7.5.4",
     "vue": "^2.5.22",
     "vue-cropper": "^0.4.9",
     "vue-i18n": "^8.7.0",
     "vue-router": "^3.0.2",
-    "vuedraggable": "^2.20.0",
+    "vuedraggable": "^2.21.0",
     "vuex": "^3.0.1"
   }
 }
