--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-vue": "^5.2.2",
     "flow-bin": "^0.94.0",
+    "fs-extra": "^8.1.0",
     "husky": "^1.3.1",
     "jest": "^23.6.0",
+    "js-base64": "^2.5.1",
     "lila-bin": "^0.8.0",
     "lila-core": "^0.8.0",
     "lila-tasks": "^0.8.0",
