--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
+    "clipboard": "^2.0.4",
     "core-js": "^2.6.9",
     "eslint": "^5.12.0",
     "eslint-config-airbnb": "^17.1.0",
