--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "stylelint-config-standard": "^18.2.0",
     "svg-sprite-loader": "^4.1.3"
   },
-  "lint-staged": {
+  "//lint-staged": {
     "**/*.js": [
       "eslint --fix",
       "prettier --write",
@@ -78,6 +78,12 @@
       "git add"
     ],
     "**/*.{html,md,json}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
+  "lint-staged": {
+    "**/*.{js,jsx,vue,css,less,scss,sass,html,md,json}": [
       "prettier --write",
       "git add"
     ]
