--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "vue-i18n": "^8.7.0",
     "vue-router": "^3.0.2",
     "vuedraggable": "^2.21.0",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "watermark-dom": "^2.3.0"
   }
 }
