--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "@fancyapps/fancybox": "^3.5.7",
     "@fortawesome/fontawesome-free": "^5.6.3",
     "@senntyou/shortcut.css": "^0.1.0",
+    "axios": "^0.21.1",
     "chart.js": "^2.8.0",
     "clone": "^2.1.2",
     "colors.css": "^3.0.0",
