promo/index:推广佛事update

--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "json-refactor": "^1.0.0",
     "lunar-calendar": "^0.1.4",
     "moment": "^2.24.0",
+    "node-sass": "^6.0.1",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "particles.js": "^2.0.0",
